--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon index.js"
 	},
 	"dependencies": {
-		"@getbrevo/brevo": "^1.0.0",
+		"axios": "^1.6.8",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
