✨ Update environment variables for API keys and improve clarity in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 PORT=3000
-API_KEY=tu_api_key_segura
+
+# Api key to protect the microservice
+API_KEY=secret_api
 
 # Brevo
-BREVO_API_KEY=tu_clave_de_brevo
+BREVO_API_KEY=brevo_api_key
 BREVO_TEMPLATE_ID_WELCOME=123456
 BREVO_TEMPLATE_ID_NEW_POST=654321
 FROM_NAME=email_name
