--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
 services:
   newsletter:
+    container_name: newsletter
     image: jdvd01/devcorner-newsletter:latest
     build: .
-    ports:
-      - "${PORT:-3001}:3001"
     environment:
-      - PORT=${PORT}
       - API_KEY=${API_KEY}
       - BREVO_API_KEY=${BREVO_API_KEY}
       - BREVO_TEMPLATE_ID_WELCOME=${BREVO_TEMPLATE_ID_WELCOME}
       - BREVO_TEMPLATE_ID_NEW_POST=${BREVO_TEMPLATE_ID_NEW_POST}
       - FROM_NAME=${FROM_NAME}
       - FROM_EMAIL=${FROM_EMAIL}
+    expose:
+      - 3001
     networks:
-      - newsletter
+      - newsletter-network
     env_file:
       - .env
     restart: unless-stopped
 
 networks:
-  newsletter:
-    external: true
+  newsletter-network:
+    name: newsletter-network
+    driver: bridge
