✨ Refactor email handling to add subscriber to Brevo list and improve email sending logic

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ API_KEY=secret_api
 BREVO_API_KEY=brevo_api_key
 BREVO_TEMPLATE_ID_WELCOME=123456
 BREVO_TEMPLATE_ID_NEW_POST=654321
+BREVO_LIST_ID=123456
 FROM_NAME=email_name
 FROM_EMAIL=email@email.com
